0.13.0:

2008-12-01  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/canvas.hg: Added get_static_root_item() and 
	get_static_root_item_model().
	* goocanvas/src/libgoocanvas_vfuncs.defs:
	* goocanvas/src/item.hg: Added set/get_is_static() and the vfuncs.
	Added animation_finished signal.
	* goocanvas/src/itemmodel.hg: Added animation_finished signal.

2008-11-18  Jonathon Jongsma  <jonathon@quotidian.org>

	* examples/demo/primitives.cc: use cairo_matrix_t directly since that's
	actually the type that we need for the g_object_set() call.  This fixes the
	build when using cairomm 1.7+ (Bug #560074)

2008-11-13  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/Makefile_list_of_hg.am_fragment:
	* goocanvas/src/gridmodel.ccg:
	* goocanvas/src/gridmodel.hg: Added GridModel.

2008-11-13  Murray Cumming  <murrayc@murrayc.com>

	* tools/extra_defs_gen/generate_defs_goocanvas.cc: Added the new grid 
	item.
	* goocanvas/src/libgoocanvas_methods.defs:
	* goocanvas/src/libgoocanvas_signals.defs: Regenerated.

	* goocanvas/goocanvasmm.h:
	* goocanvas/src/Makefile_list_of_hg.am_fragment:
	* goocanvas/src/grid.ccg:
	* goocanvas/src/grid.hg: Added Grid, wrapping GooCanvasGrid.

2008-11-07  José Alburquerque  <jaalburqu@svn.gnome.org>

	* goocanvas/src/enums.hg:
	* goocanvas/src/itemmodel.hg:
	* goocanvas/src/path.hg: Modify enums so that CANVAS_* is removed.
	Bug #557990 (Louis-Francis Ratté-Boulianne)

2008-11-05  Armin Burgmeier  <armin@openismus.com>

	* goocanvas/src/item.hg:
	* goocanvas/src/item.ccg: Remove the const qualifier for the
	get_items_at_vfunc, because otherwise the item itself cannot be added
	to the returned list of items.
	Bug #559374 (Louis-Francis Ratté-Boulianne)

2008-10-30  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/item.hg: Correct ensure_upated() to 
	ensure_updated().
	Bug #558489 (Louis-Francis Ratté-Boulianne)

0.12.0:

2008-10-13  Murray Cumming  <murrayc@murrayc.com>
