@@ -62,23 +62,26 @@ Primitives::getWidget()
 bool
 Primitives::_on_background_button_press(const Glib::RefPtr<Goocanvas::Item>& item, GdkEventButton* ev)
 {
-
+  return false;
 }
 
 bool
 Primitives::_on_button_press(const Glib::RefPtr<Goocanvas::Item>& item, GdkEventButton* ev)
 {
   std::cerr << "Clicked!" << std::endl ;
+  return false;
 }
 
 bool
 Primitives::_on_button_release(const Glib::RefPtr<Goocanvas::Item>& item, GdkEventButton* ev)
 {
+  return false;
 }
 
 bool
 Primitives::_on_motion_notify(const Glib::RefPtr<Goocanvas::Item>& item, GdkEventMotion* ev)
 {
+  return false;
 }
 
 void
